5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1888_1643.log
== TEST (2019-07-09 16:35:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

aluno=array(eval(input("Notas dos alunos: ")))
qap=0 #quantidade de alunos aprovados
aluno=aluno.T
for i in range(shape(aluno)):
	if aluno[0] >= 5:
		qap = qap + 1
	else:
		qap = qap
	for i in range()	
		
	

-- ERROR:
File "XXXX", line 12
    for i in range()	
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

aluno=array(eval(input("Notas dos alunos: ")))
qap=0 #quantidade de alunos aprovados
aluno=aluno.T
for i in range(shape(aluno)):
	if aluno[0] >= 5:
		qap = qap + 1
	else:
		qap = qap
	for i in range(shape(aluos)[i:j]):
		for i in 
		
	

-- ERROR:
File "XXXX", line 13
    for i in 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
